force-app/main/default/objects/SAC_CaseReclamante__c/SAC_CaseReclamante__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado en el proyecto SAC para almacenar los reclamantes de una Reclamación.</description>
    <label>Reclamante</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Código reclamante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reclamantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>