force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_Account__c.field-meta.xml
<CustomField>
    <fullName>SAC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contiene el cliente reclamante</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reclamantes</relationshipLabel>
    <relationshipName>Reclamantes</relationshipName>
    <type>Lookup</type>
</CustomField>