force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_Case__c.field-meta.xml
<CustomField>
    <fullName>SAC_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso relacionado al reclamante.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reclamantes</relationshipLabel>
    <relationshipName>Reclamantes</relationshipName>
    <type>Lookup</type>
</CustomField>