force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_Contact__c.field-meta.xml
<CustomField>
    <fullName>SAC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contiene el contacto (representante o el mismo cliente) del cliente</description>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reclamantes</relationshipLabel>
    <relationshipName>Reclamantes</relationshipName>
    <type>Lookup</type>
</CustomField>