force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_CorreoElectronico__c.field-meta.xml
<CustomField>
    <fullName>SAC_CorreoElectronico__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>