force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_DireccionNoAlf__c.field-meta.xml
<CustomField>
    <fullName>SAC_DireccionNoAlf__c</fullName>
    <description>Campo para que los usuarios informen la dirección no alfabetizada asociada al reclamante</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>