force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_DireccionPostal__c.field-meta.xml
<CustomField>
    <fullName>SAC_DireccionPostal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección postal</label>
    <length>60</length>
    <type>Text</type>
</CustomField>