force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_EmailNoAlf__c.field-meta.xml
<CustomField>
    <fullName>SAC_EmailNoAlf__c</fullName>
    <description>Campo para que los usuarios informen el email no alfabetizado de los reclamantes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>