force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_Empleado__c.field-meta.xml
<CustomField>
    <fullName>SAC_Empleado__c</fullName>
    <description>Campo para indicar si el reclamante es empleado</description>
    <formula>SAC_Account__r.AV_Empleado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es empleado</label>
    <type>Checkbox</type>
</CustomField>