force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_FechaDeNacimiento__c.field-meta.xml
<CustomField>
    <fullName>SAC_FechaDeNacimiento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>