force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_ProvinciaContacto__c.field-meta.xml
<CustomField>
    <fullName>SAC_ProvinciaContacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provincia contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>