force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_ReclamantePrincipal__c.field-meta.xml
<CustomField>
    <fullName>SAC_ReclamantePrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reclamante principal</label>
    <type>Checkbox</type>
</CustomField>