force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_Segmento__c.field-meta.xml
<CustomField>
    <fullName>SAC_Segmento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Segmento</label>
    <length>60</length>
    <type>Text</type>
</CustomField>