force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_Subsegmento__c.field-meta.xml
<CustomField>
    <fullName>SAC_Subsegmento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subsegmento</label>
    <length>60</length>
    <type>Text</type>
</CustomField>