force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_Telefono__c.field-meta.xml
<CustomField>
    <fullName>SAC_Telefono__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>