force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_TelefonoNoAlf__c.field-meta.xml
<CustomField>
    <fullName>SAC_TelefonoNoAlf__c</fullName>
    <description>Campo para que los usuarios informen el teléfono no alfabetizado de los clientes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>