force-app/main/default/objects/SAC_CaseReclamante__c/fields/SAC_TieneDatosNoAlf__c.field-meta.xml
<CustomField>
    <fullName>SAC_TieneDatosNoAlf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que informa si un reclamante tiene datos no alfabetizados asociados</description>
    <label>Tiene datos no albafetizados</label>
    <type>Checkbox</type>
</CustomField>